fix 'your sheet is published' alignment in hebrew + english

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -8472,8 +8472,11 @@ body.interface-hebrew .publishBox .react-tags__search-input::placeholder, body.i
 }
 
 .publishSettingsEditMode .publishButton .publishedText {
-  text-align: left;
-  margin: 5px 15px 0 20px;
+  text-align: start;
+  margin-top: 5px;
+  margin-bottom: 0px;
+  margin-inline-start: 0px;
+  margin-inline-end: 15px;
   font-size: var(--sans-serif-body-font-size);
   --english-font: var(--english-sans-serif-font-family);
   --hebrew-font: var(--hebrew-sans-serif-font-family);
